<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MIJA</string>
    <string name="record">Aufnahme</string>
    <string name="pause">Pause</string>
    <string name="play">Wiedergabe</string>
    <string name="stop">Stop</string>
    <string name="article">Artikel</string>
    <string name="settings">Einstellungen</string>
    <string name="placeholderTitle">Titel</string>
    <string name="stt_button">Speech To Text Button</string>
    <string name="settingsLanguage">Sprache auswählen:</string>
    <string name="german">Deutsch</string>
    <string name="english">Englisch</string>
    <string name="audiorecording_button">Audioaufnahme</string>
    <string name="videorecording_button">Videoaufnahme</string>
    <string name="photograph_button">Fotoaufnahme</string>

    <!-- miro -->
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="dot">.</string>
    <string name="title_activity_sentence_list">SentenceList</string>
    <string name="next_button_text">Next</string>
    <string name="email_button">Share via Email</string>
    <string name="process">Process</string>

    <!-- Nuance -->
    <string name="button_websearch">Websearch</string>
    <string name="text_endPointer">Endpointer:</string>
    <string name="radio_endPointerShort">Short</string>
    <string name="radio_endPointerLong">Long</string>
    <string name="radio_endPointerNone">None</string>
    <string name="button_stop">Stop</string>
    <string name="button_startTts">Get TTS</string>
    <string name="button_startDictation">Dictate</string>
    <string name="title_dictation">Test Dictation</string>
    <string name="title_tts">Test TTS</string>
    <string name="hello">Hello World, SampleVoiceApp!</string>
    <string name="title_main">Choose a feature to test</string>
    <string name="button_dictation">Dictation</string>
    <string name="button_tts">TTS</string>
    <string-array name="arr_ttsVoices">
        <item>Samantha</item>
        <item>Tom</item>
    </string-array>
    
    
</resources>
