<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical"
    android:layout_marginTop="100dip" >

    <!-- Screen Design for settings tab -->

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dip"
        android:textColor="@android:color/black"
        android:text="@string/settingsLanguage"
        android:textSize="18dip" />

    <RadioButton
        android:id="@+id/germanRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dip"
        android:text="@string/german" />

    <RadioButton
        android:id="@+id/englishRadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dip"
        android:text="@string/english" />

</LinearLayout>